# pomdp-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  versions.txt
.github/workflows/: build_wheel.yml  ci.yml  macos.yml  pre_commit.yml  pypi_deployment.yml  python-package.yml  ubuntu.yml
_sphinx_src/: conf.py  design_principles.rst  extensions.rst  getting_started.rst  index.rst  installation.rst  make.bat  refs.bib
_sphinx_src/api/: modules.rst  pomdp_py.representations.distribution.rst
docs/: .htaccess  conf.py  existing_solvers.rst  extensions.rst  getting_started.rst  index.html  index.rst  installation.rst  refs.bib  simple_rl_integration.rst
docs/_sphinx_src/: Makefile  building_docs.rst  conf.py  examples.external_solvers.rst  examples.mos.rst  examples.rst  examples.tiger.rst  existing_domains.rst  existing_solvers.rst  index.rst  installation.rst  make.bat  other_libraries.rst  refs.bib  simple_rl_integration.rst
docs/_sphinx_src/api/: modules.rst  pomdp_py.rst  (+28 more)
docs/api/: pomdp_py.algorithms.rst  pomdp_py.framework.rst  pomdp_py.representations.belief.rst  pomdp_py.representations.rst  pomdp_py.rst  refs.bib
docs/html/: api_ref.html  building_docs.html  changelog.html  design_principles.html  example.action_prior.html  examples.action_prior.html  examples.external_solvers.html  examples.html  examples.mos.html  examples.tiger.html  existing_domains.html  existing_solvers.html  extensions.html  genindex.html  getting_started.html  index.html  installation.html  modules.html  objects.inv  other_libraries.html  py-modindex.html  search.html  searchindex.js  simple_rl_integration.html
pomdp_problems/: __init__.py  util.py
pomdp_problems/cryingbaby/: README.md  cryingbaby.py
pomdp_problems/light_dark/: README.rst  __init__.py  problem_discrete.py  test.py
pomdp_problems/load_unload/: README.rst  load_unload.py
pomdp_problems/multi_object_search/: README.rst  problem.py
pomdp_problems/rocksample/: __init__.py  rocksample_problem.py
pomdp_problems/tag/: __init__.py  constants.py  example_worlds.py  experiment.py  problem.py
pomdp_problems/tiger/: README.rst  __init__.py  tiger_problem.py
pomdp_py/: __init__.py  __main__.py  util.py
pomdp_py/algorithms/: algorithms.pxd  ccpomcp.pxd  ccpomcp.pyx  po_rollout.pxd  po_rollout.pyx  po_uct.pxd  po_uct.py  po_uct.pyx  pomcp.pxd  pomcp.py  pomcp.pyx  value_function.py  value_iteration.py  value_iteration.pyx
pomdp_py/framework/: Agent.py  Environment.py  OOPOMDP.py  POMDP.py  Planner.py  agent.py  basics.pxd  basics.py  basics.pyx  environment.py  generalization.pxd  generalization.pyx  oopomdp.pxd  oopomdp.py  oopomdp.pyx  planner.pxd  planner.py  planner.pyx  pomdp.py  shared.py
pomdp_py/models/: AbstractOOPOMDP.py  AbstractPOMDP.py  Environment.py  OOPOMDP.py  POMDP.py  shared.py
pomdp_py/problems/: __init__.py
pomdp_py/solvers/: OOPOMCP.py  POMCP.py  Planner.py  random.py
pomdp_py/utils/: __init__.py  colors.py  cvec.pxd  cvec.pyx  cython_utils.pxd  cython_utils.pyx  debugging.py  math.py  misc.py  plotting.py  templates.py  test_utils.py  typ.py  util.py
pomdp_py/visual/: __init__.py  search_tree.py  visual.py
problems/load_unload/: README.rst  __init__.py
problems/maze/: __init__.py
problems/multi_object_search/: README.md  example_worlds.py  problem.py
problems/rocksample/: rocksample_problem.py
problems/tag/: README.rst
problems/tiger/: tiger_problem.py
scripts/: README.md  pomdp_py_release.sh
tests/: README.md  appl.patch  test_all.py  test_conversion_pomdp-solve.py  test_conversion_pomdpx.py  test_framework_basics.py  test_framework_generalization.py  test_hashing_pickling.py  test_local.sh  test_particles.py  test_response.py  test_sarsop.py  test_tree_debugger.py  test_util_vector_ops.py  test_vi_pruning.py
(+520 files in other folders)
